js/src/jsapi-tests/binast/invalid/tests/function-decl-in-then.js
function f() {
}
if (1) {
}
